# SkillBoxCplus

./: .gitignore  README.md  shemaDNS.drawio
Home1/: main4
Home2/: main1  main2.cpp  main3  main3.cpp
Home3/: main1.cpp  main2.cpp  main4.cpp  main5.cpp  main6.cpp  main8  main8.cpp  main9  main9.cpp
Module4/: main7.cpp
Module5/: main1.cpp  main4  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
Module6/: main1.cpp  main4.cpp  main5.cpp  main6  main6.cpp
Module7/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
Moudle2/: main1.cpp  main2.cpp  main3.cpp  main4.cpp
module10/: main1  main1.cpp
module11/: main1  main1.cpp  main2  main2.cpp  main3  main3.cpp  main4  main4.cpp
module12/: main1.cpp  main2.cpp  main3.cpp
module13/: main1  main1.cpp  main2  main2.cpp  main3.cpp
module14/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5  main5.cpp
module15/: main  main1.cpp  main2.cpp  main3.cpp  main4.cpp
module16/: main  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5  main5.cpp  main6.cpp
module17/: main  main1.cpp  main2.cpp  main3  main3.cpp
module18/: main1.cpp  main2.cpp  main3  main3.cpp
module19/: bank.txt  main1  main1.cpp  main2.cpp  main3  main3.cpp  main3.txt  main4.cpp  main5.cpp
module20/: basket.txt  main  main1.cpp  main2.cpp  main3.cpp  main4.cpp
module21/: data.txt  main  main1.cpp  main2.cpp  main3.cpp
module25/project2/src/: CMakeLists.txt  cpu.cpp  gpu.cpp  kbd.cpp
moudle25/project1/: CMakeLists.txt
moudle25/project1/include/: instruments.h
moudle25/project1/src/: CMakeLists.txt
(+79 files in other folders)
